tests/typechecking/valid/let add IntInt2.ml
let x = 1 + 2 in
let y = 3 + 4 in 
print_int (x+y)
