tests/typechecking/invalid/let-add-IntFloat.ml
let x = 1 + 0.2 in
let y = 3 + 4 in 
print_int (x+y)
